# microrev

./: .gitignore  INSTALL.md  Makefile  README.md  config.inc.defaults
src/: CMakeLists.txt  README.md  pmu_info.sh
src/benchmarks/: CMakeLists.txt
src/benchmarks/src/: README.md  cache.cpp  cacheline.cpp  producer_consumer.cpp  protocols.cpp  rd_latency.cpp
src/cmake/: FindPAPI.cmake  PAPIConfig.cmake
src/condor/: config.submit-template  config.submit.template  hw3.submit  papi.submit  perf.submit  run-bench.sh  run-papi.bash  run-perf.bash  run.sh  sweep.bash
src/local/: .gitignore  Makefile  arch.cfg  condor_unrolled_access.csv  condor_unrolled_access_once.csv  config.mk  gdb.sh  run-all.sh  run.sh  single-run.sh
src/local/benchmarks/: README.md
src/local/csv_unrolled_acces/: result_LOAD_FROM_EXCLUSIVE.csv  result_LOAD_FROM_INVALID.csv  result_LOAD_FROM_MODIFIED.csv  result_LOAD_FROM_SHARED_OR_FORWARD.csv  result_STORE_ON_EXCLUSIVE.csv  result_STORE_ON_INVALID.csv  result_STORE_ON_MODIFIED.csv  result_STORE_ON_SHARED_OR_FORWARD.csv
src/local/csv_unrolled_access_once/: result_LOAD_FROM_EXCLUSIVE.csv  result_LOAD_FROM_MODIFIED.csv  result_LOAD_FROM_SHARED_OR_FORWARD.csv  result_STORE_ON_EXCLUSIVE.csv  result_STORE_ON_MODIFIED.csv  result_STORE_ON_SHARED_OR_FORWARD.csv
src/local/data/: condor_flush.csv
src/local/include/: benchmark_helpers.h  benchmark_helpers.h.unfold  benchmark_helpers.h.unfold_once  constants.h  cores.h  counter.h  counters.h  init_state.h  pmc_counters.h  pmc_utils.h  shuffle.h  thread_utils.h
src/local/lib/: counter.cpp  (+3 more)
src/profiling/: CMakeLists.txt  README.md
src/standalone/: branch_predictor.c  thread_vs_pthread.cpp
(+51 files in other folders)
